# BattleBot

./: .gitignore  README.md  gui_app.py  main.py  profile_stats.txt  requirements.txt
Cpp/tests/: SD_control_test.cpp
PCB/: #auto_saved_files#  Battlebot_pcb.txt  BotBattle-B_Cu.gbr  BotBattle-B_Mask.gbr  BotBattle-B_Paste.gbr  BotBattle-B_Silkscreen.gbr  BotBattle-Edge_Cuts.gbr  BotBattle-F_Cu.gbr  BotBattle-F_Mask.gbr  BotBattle-F_Paste.gbr  BotBattle-F_Silkscreen.gbr  BotBattle-NPTH.drl  BotBattle-PTH.drl  BotBattle-job.gbrjob  BotBattle.kicad_pcb  BotBattle.kicad_prl  BotBattle.kicad_pro  BotBattle.kicad_sch  BotBattle.kicad_sch-bak  fp-info-cache  ~BotBattle.kicad_pcb.lck  ~_autosave-BotBattle.kicad_pcb.lck
PCB/models/MCP3008-L-P/: 2024-04-23_09-11-01.kicad_sym
Python/: gui_app.py  main.py  requirements.txt
Python/src/client/: aim_assist.py  logic.py  (+4 more)
Python/tests/: SD_control_test.py  Weapon_calibration.py  camera_test.py  controler_test.py  detection_test.py  display_image.py  esc_servo.py  hardware_pwm.py  opencv.py  video_test.py
code/: controler_client.py  controler_server.py  controler_test.py
cpp/: CMakeLists.txt
django_battlebot/: manage.py  private_settings.json
django_battlebot/django_battlebot/: asgi.py  settings.py  urls.py  wsgi.py
docs/: coding_standards.md  commit_template.md  config.yaml  file_directory.md
src/client/: aim_assist.py  client.py  communications.py  inputs.py  logic.py  video.py
src/server/: communications.py  motor_controller.py  server.py  video.py
tests/: detection_test.py  esc_servo.py  opencv.py  video_test.py
(+6 files in other folders)
